# nova

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  TODO.md  build.rs  test_spawn.rs
demo/: client.py  gen_proto.sh  nova_control_pb2.py  nova_control_pb2_grpc.py
docs/: README.md  architecture.md  becoming.md  deployment.md  faq.md  isaac_lab_setup.md  resources.md  roadmap.md
examples/: grpc_client.rs  test_mesh.rs
isaac_env/: README.md  generate_proto.sh  requirements.txt  server.py
proto/: nova_control.proto  simulator.proto
src/: main.rs
src/becoming/: mod.rs
src/brain_interface/: baseline.rs  mod.rs  types.rs
src/control/: brain_control.rs  foot_contact.rs  keyboard.rs  mod.rs  pd_controller.rs  safety.rs  walking.rs
src/models/: humanoid.rs  mod.rs
src/robot/: mod.rs  sim.rs  unitree.rs
src/simulation/: mod.rs  physics.rs
